# lidar_detector

./: CMakeLists.txt  package.xml
launch/: vision.launch
scripts/: detect_ground.py  detect_leader.py
src/: lidar_filter.cpp  lidar_filter.h
