<?xml version="1.0"?>
<package format="2">
  <name>lidar_detector</name>
  <version>1.0.0</version>
  <description>Package for tracking an object in LiDAR point cloud</description>

  <maintainer email="brozbohu@fel.cvut.cz">Bohumil Broz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_py</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
</package>
